--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>sevn round sports</title>
   </head>
   <body>
-    
+    <header>
+      <h1>SEVN ESPORTES ⚽</h1>
+    </header>
+    <main>
+
+    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
