feat: main content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <title>sevn round sports</title>
   </head>
   <body>
@@ -10,7 +13,54 @@
       <h1>SEVN ESPORTES ⚽</h1>
     </header>
     <main>
+      <h2>Confira as rodadas do nosso campeonato fictício!</h2>
+      <section class="content">
+        <div class="title-content">
+          <button class="btn-arrow">
+            <img src="/arrow.svg" alt="arrow-left">
+          </button>
+          <div>
+            <p>Rodadas de Jogos</p>
+            <strong>RODADA 1</strong>
+          </div>
+          <button class="btn-arrow">
+            <img src="/arrow.svg" alt="arrow-right" style="transform: rotate(180deg);">
+          </button>
+        </div>
 
+        <div class="round-container">
+          <div class="round-content">
+            <div class="team">
+              <img src="/team_shield_a.svg" alt="aa">
+            <span>Time A</span>
+            </div>
+            <div class="score">
+              <span>3</span>
+              <img src="/x.svg" alt="x">
+              <span>0</span>
+            </div>
+            <div class="team">
+              <img src="/team_shield_a.svg" alt="aa">
+            <span>Time A</span>
+            </div>
+          </div>
+          <div class="round-content">
+            <div class="team">
+              <img src="/team_shield_a.svg" alt="aa">
+            <span>Time A</span>
+            </div>
+            <div class="score">
+              <span>3</span>
+              <img src="/x.svg" alt="x">
+              <span>0</span>
+            </div>
+            <div class="team">
+              <img src="/team_shield_a.svg" alt="aa">
+            <span>Time A</span>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
